force-app/main/default/objects/Twitter_Setting__mdt/Twitter_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Twitter Setting</label>
    <pluralLabel>Twitter Setting</pluralLabel>
</CustomObject>