force-app/main/default/objects/Twitter_Setting__mdt/fields/Access_Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Secret__c</fullName>
    <label>Access Token Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>