force-app/main/default/objects/Twitter_Setting__mdt/fields/Base_API_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_API_URL__c</fullName>
    <label>Base API URL</label>
    <type>Url</type>
</CustomField>