force-app/main/default/objects/Twitter_Setting__mdt/fields/Code_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Code_Challenge__c</fullName>
    <label>Code Challenge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>