force-app/main/default/objects/Twitter_Setting__mdt/fields/Upload_Media_API_URL__c.field-meta.xml
<CustomField>
    <fullName>Upload_Media_API_URL__c</fullName>
    <label>Upload Media API URL</label>
    <type>Url</type>
</CustomField>